Fix to gap of the subsection

--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -139,7 +139,7 @@ subsection {
     margin-top: 4rem;
     margin-bottom: 2rem;
     display: grid;
-    gap: 3rem;
+    gap: 1rem;
 }
 
 /* Button */
